# PQS-AMR

./: .gitignore  CMakeLists.txt  LICENSE  README.markdown  cmake_uninstall.cmake.in  setup-build.sh
config/: PQS_config.h.in
examples/: CMakeLists.txt  InterfaceInitModule.h  PoreInitModule.cc  pqs_amr.cc
examples/2D/: CMakeLists.txt
examples/2D/no-solid-phase/: CMakeLists.txt  InterfaceInitModule.cc  PoreInitModule.cc  sample.conf
examples/no-solid-phase/: CMakeLists.txt  InterfaceInitModule.cc  InterfaceInitModule.h  PoreInitModule.cc  PoreInitModule.h  main.cc  sample-3D.conf
examples/no-solid-phase/kernels/: CMakeLists.txt  interface_kernels_2d.f.in  interface_kernels_2d.h  interface_kernels_3d.f.in  interface_kernels_3d.h
examples/no-solid-phase/sample-config-files/: pqs-amr-sample-2d.conf
examples/periodic-packing/: CMakeLists.txt  InterfaceInitModule.cc  InterfaceInitModule.h  PoreInitModule.cc  PoreInitModule.h  main.cc  sample-2D.conf  sample-3D.conf
examples/periodic-packing/kernels/: CMakeLists.txt  interface_kernels_2d.f.in  interface_kernels_2d.h  interface_kernels_3d.f.in  interface_kernels_3d.h  pore_kernels_2d.f.in  pore_kernels_2d.h  pore_kernels_3d.f.in  pore_kernels_3d.h
examples/simple-packing/: CMakeLists.txt  InterfaceInitModule.cc  InterfaceInitModule.h  PoreInitModule.cc  PoreInitModule.h  main.cc  sample-2D.conf  sample-3D.conf
examples/simple-packing/kernels/: interface_kernels_2d.f.in  interface_kernels_2d.h  interface_kernels_3d.f.in  interface_kernels_3d.h  pore_kernels_2d.f.in  pore_kernels_2d.h  pore_kernels_3d.f.in  pore_kernels_3d.h
ext/googletest/: CMakeLists.txt.in
ext/samrai/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  macros.h  utilities.h
src/PQS/: CMakeLists.txt  Solver.cc  Solver.h
src/PQS/kernels/: CMakeLists.txt  pqs_kernels_2d.h
src/fortran/: CMakeLists.txt  spatial_derivatives2d.f.in  spatial_derivatives2d.h  spatial_derivatives3d.f.in  spatial_derivatives3d.h
src/kernels/: CMakeLists.txt  kernels_2d.f.in  kernels_2d.h  spatial_derivatives3d.f.in  spatial_derivatives3d.h
src/lsm/: CMakeLists.txt  Toolbox.cc  Toolbox.h
src/lsm/kernels/: CMakeLists.txt  kernels_2d.f.in  kernels_2d.h  kernels_3d.f.in  kernels_3d.h
src/math/: BoundaryConditions.cc  BoundaryConditions.h  CMakeLists.txt  LSMAlgorithms.cc  LSMAlgorithms.h  LSMToolbox.cc  LSMToolbox.h  TimeIntegration.cc  TimeIntegration.h  Toolbox.cc  Toolbox.h
src/math/kernels/: CMakeLists.txt  boundary_conditions_2d.f.in  boundary_conditions_2d.h  boundary_conditions_3d.f.in  boundary_conditions_3d.h  level_set_method_2d.f.in  level_set_method_2d.h  level_set_method_3d.f.in  level_set_method_3d.h  spatial_derivatives_2d.f.in  spatial_derivatives_3d.f.in  time_integration_2d.f.in  time_integration_2d.h  time_integration_3d.f.in  time_integration_3d.h  utilities_2d.f.in  utilities_2d.h  utilities_3d.f.in  utilities_3d.h
src/pqs/: Algorithms.cc  Algorithms.h  CMakeLists.txt  DataInitStrategy.cc  DataInitStrategy.h  DataTransferModule.cc  DataTransferModule.h  GridManager.cc  GridManager.h  InterfaceInitStrategy.cc  InterfaceInitStrategy.h  PoreInitStrategy.cc  PoreInitStrategy.h  Solver.cc  Solver.h  TagAndInitModule.cc  TagAndInitModule.h  TagAndInitializeModule.cc  TagAndInitializeModule.h  TagInitAndDataTransferModule.cc  TagInitAndDataTransferModule.h  utilities.h
src/pqs/kernels/: CMakeLists.txt  kernels_2d.f.in  kernels_2d.h  kernels_3d.f.in  kernels_3d.h
src/programs/: CMakeLists.txt
src/programs/sample-input-files/: curvature-2d-circle.input  curvature-3d-sphere.input
src/sample-input-files/: CMakeLists.txt
src/simulation/: CMakeLists.txt  main.cc
src/utilities/: CMakeLists.txt  application.cc  application.h  error.cc  error.h  macros.h
test/: CMakeLists.txt  test.cc
test/lsm/: CMakeLists.txt  TestInterfaceInitModule.cc  TestPoreInitModule.cc  fixture.cc  fixture.h  fixture_kernels.cc  test_lsm_2d.cc  test_lsm_3d.cc  test_lsm_kernels_2d.cc  test_lsm_kernels_3d.cc
test/lsm/kernels/: kernels_2d.h  kernels_3d.f.in
test/math/: CMakeLists.txt
test/math/lsm/: CMakeLists.txt  TestInterfaceInitModule.h  TestPoreInitModule.h  fixture.cc  fixture.h  fixture_kernels.cc  fixture_kernels.h  test_lsm_2d.cc  test_lsm_3d.cc  test_lsm_kernels_2d.cc  test_lsm_kernels_3d.cc
test/math/lsm/kernels/: kernels_2d.f.in  kernels_2d.h  kernels_3d.h
test/pqs/: CMakeLists.txt  TestDataInitModule.h  TestInterfaceInitModule.cc  TestInterfaceInitModule.h  TestPoreInitModule.cc  TestPoreInitModule.h  fixture.cc  fixture.h  test_pqs.cc  test_pqs_2d.cc  test_pqs_3d.cc
