# --------------------------------------------------------------
# Customizations for examples
# --------------------------------------------------------------

# CMake initialization: No customizations
# Build parameters: No customizations
# Build requirements: No customizations
# Installation: No customizations

# --------------------------------------------------------------
# Build targets
# --------------------------------------------------------------

# Add individual examples
add_subdirectory(no-solid-phase)
add_subdirectory(periodic-packing)
